# ansible-k8s

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_main.py
k8s/: deployment.yaml  service.yaml
